add data source and config in app service. Close #2

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .idea
 .idea/workspace.xml
 
-/demo/demoApp/conf/.env
-/demo/demoApp/conf/rsa_private.pem
-/demo/demoApp/conf/rsa_public.pem
+/app/app-services/conf/.env
+/app/app-services/conf/rsa_private.pem
+/app/app-services/conf/rsa_public.pem
