add app nsq producer in app service. close #14

--- a/app/app-services/conf/.env.example
+++ b/app/app-services/conf/.env.example
@@ -15,6 +15,9 @@ REDIS_USER=""
 REDIS_PASS=""
 REDIS_DB=0
 
+# nsq
+NSQ_ADDR=
+
 # rsa
 RSA_PRIVATE=config/rsa_private.pem
 RSA_PUBLIC=config/rsa_public.pem
